--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "star-wars-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://BrianAcos.github.io/star-wars-app",
+  "homepage": "https://BrianAcos.github.io/star-wars-app/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
