mensaje del commit

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "star-wars-app",
+  "name": "star-wars-app-pau",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://brianacos.github.io/star-wars-app/",
